css/styles.css
* {
    margin: 0;
    line-height: calc(1em + 0.5rem);
}
html {
    scroll-behavior: smooth;
}

.container {
    max-width: 1280px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.0rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.content {
  padding-top: 7rem;
  padding-bottom: 7rem;
}

/* HEADER */

.hamburger {
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 25px;
    height: 20px;
    cursor: pointer;
}
  
.hamburger span {
    display: block;
    height: 3px;
    background: #333;
    border-radius: 2px;
}

.logo {
    width: 30%;
}

.headerBar {
    display: flex;
    justify-content: space-between;
    height: 7rem;
    align-items: center;
}

.responsive-img {
    width: 100%;        
    height: 100%;       
    max-width: 600px;   
    display: block;    
}

.nav-header {
    display: flex;
    align-items: end;
    padding: 0.25rem;
}

.nav-links {
    display: flex;
    justify-content: flex-end; 
    gap: 1.5rem;
    list-style: none;
    text-decoration: none;
}

a {
    color: #111111;
    font-size: 1rem;
    text-decoration: none;
}

/* IMG SLIDER */

.slider {
    position: relative;
    width: 100%;
    height: 37.5rem;
    margin: auto;
    overflow: hidden;
}

.slides {
  height: 37.5rem;
}

.slider img {
  display: none;
  width: 100%;         
  height: 100%;
  object-fit: cover;   
  object-position: center; 
}

img.displaySlide {
    display: block;
    animation-name: fade;
    animation-duration: 1.5s;
}

.content {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 40px;
}

.intro {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

@keyframes fade {
    from {opacity: .5}
    to {opacity: 1}
}

/* STATIC IMAGE & HEADER BANNER */

.static {
    position: relative;
    width: 100%;
    height: 37.5rem;
    margin: auto;
    overflow: hidden;
}

.static img {
  display: block;
  width: 100%;         
  height: 100%;
  object-fit: cover;   
  object-position: center; 
}

.static-header {
  position: absolute;       
  top: 75%;                           
  color: #fdf9f5;             
  padding: 1.5rem 2rem;
}

.static-header h1 {
  font-size: 3rem;
  margin-bottom: 0.5rem;
}

.static-header p {
  font-size: 1.5rem;
  font-weight: 400;
}

/* FOOTER */

hr.element-divider-separator {
  border-top: 0.125rem solid grey
}

.footer-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: auto;
  gap: 20px;
  font: 1.8rem;
}

.column-footer {
  display: flex;
  flex-direction: column;
  flex-shrink: 1 1;
  margin-top: 1rem;
  gap: 1rem;
}

.footer-list {
  list-style-type: none;
}

ul.footer-list {
  padding: 0;
  font-size: 0.8rem;
}

.column-footer p,li,a {
  font-size: 1rem;
}

.footer img {
  max-width: 380px;
}


.footer-bottom {
  width: 100%;
  text-align: center;
  margin-top: 30px;
  font-size: 1rem;
  padding: 1.5rem;
  color: #f9f9f9;
  background-color: #111111;
}

/* INDEX.HTML */

.split {
  display: flex;
  flex-direction: row;
  padding: 2rem 0;
  gap: 5%;
}

.text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 47.5%;
  text-align: start;
}

.image-content {
  width: 47.5%;
  max-width: 37.5rem;
  height: auto;
  max-height: 50rem;
  border-radius: 2rem;
  overflow: hidden;
}

.content img {
  display: block;
  width: 100%;         
  height: auto;
  object-fit: cover;   
  object-position: center;
}

/* SERVICES */

.text h2 {
  font-size: 3rem;
}

.text li, h3, p {
  font-size: 1.6rem;
  margin-bottom: 0.2em;
}

/* EMERGENCIES */

.emergency-container {
  width: 100%;
  max-width: 60rem;
  margin: auto;        
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.emergency-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: grey;
  border: solid grey 0.2rem;
  margin-bottom: 0.625rem;     
  border-radius: 0.25rem;      
  overflow: hidden;
}

.emergency-item .label {
  color: #fdf9f5;
  padding: 0.9375rem 1.25rem;  
  font-size: 1rem;         
  font-weight: 600;
  display: flex;
  align-items: center;
  gap: 1rem;               
  letter-spacing: 0.03125rem;  
}

.emergency-item .phone {
  background: #fdf9f5;
  color: grey;
  padding: 0.9375rem 1.5625rem; 
  text-decoration: none;
  font-weight: 600;
  font-size: 1.25rem;         
}

.emergency-item .phone:hover {
  opacity: 0.85;
}


/* FAQs */

.questions {
  display: flex;
  flex-direction: column;
  width: 60%;
  margin: auto;
  gap: 2.5rem;
  padding-top: 7.5rem;
  padding-bottom: 3.75rem;
}

h4 {
  text-align: start;
  width: 90%;
  font-weight: 400;
  font-size: 1.25rem;
}

.answer {
  display: none;
  text-align: start;
  font-weight: 300;
  background-color: lightgray;
}

.question {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  background-color: #fdf9f5;
  border-radius: 0.5rem;
}

.pair {
  box-shadow: -1px 1px 0.8rem 1px grey;
  border-radius: 0.5rem;
}

.answer, .question{
  padding: 1rem;
} 

.toggle-icon {
  font-size: 1.5rem;
  color: grey;
}

/* REPORT A FAULT */

.contact-section {
  width: 100%;
  max-width: 40rem;
  margin-left: auto;
  margin-right: auto;
  padding: 0rem 1rem;
}

.contact-intro > * + * {
  margin-top: 1rem;
}

.contact-description {
  color: rgb(107 114 128);
  text-align: left;
}

.form-group-container {
  display: grid;
  gap: 1rem;
  margin-top: 2rem;
}

.form-group {
  display: flex;
  flex-direction: column;
}

.form-label {
  margin-bottom: 0.5rem;
  text-align: left;
}

.form-input,
.form-textarea {
  padding: 0.5rem;
  border: 1px solid #e5e7eb;
  display: flex;
  height: 2.5rem;
  width: 100%;
  border-radius: 0.375rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  background-color: #fdf9f5;

}

.form-input::placeholder,
.form-textarea:focus-visible {
  color: #6b7280;
}

.form-input:focus-visible,
.form-textarea:focus-visible {
  outline: 2px solid #2563eb;
  outline-offset: 2px;
}

.form-textarea {
  min-height: 120px;
}

.form-submit {
  
  margin-top: 1.2rem;
  background-color: #fdf9f5;
  padding: 13px 5px;
  border-radius: 0.375rem;
}

/*CLIENT PORTAL SIGN IN & REGISTER */

.portalButton {
    padding: 12px;
    background: #6a38c2;
    color: white;
    border: none;
    border-radius: 6px;
    font-weight: 600;
    cursor: pointer;
    margin-bottom: 20px;
}

.return {
    margin: 2rem;
    display: inline-block;
}

.box {
  display: flex;
  justify-content: center;
  align-items: center;
}

.card {
  background: #fff;
  padding: 40px 50px;
  border-radius: 10px;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
  width: 50%;
  text-align: left;
}

.card h1 {
  font-size: 26px;
  color: #2c1250;
  margin-bottom: 8px;
}

.subtitle {
  color: #777;
  font-size: 14px;
  margin-bottom: 25px;
}

label {
  display: block;
  font-weight: 500;
  color: #333;
  margin-bottom: 5px;
  font-size: 14px;
}

.required {
  color: red;
}

input[type="email"],
input[type="password"], input[type="text"] {
  width: 100%;
  padding: 10px 12px;
  border: 1px solid #d3d3e7;
  border-radius: 6px;
  margin-bottom: 15px;
  outline: none;
  transition: border 0.2s;
}

input:focus {
  border-color: #6a38c2;
}

.options {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 13px;
  margin-bottom: 20px;
}

.options a {
  color: #6a38c2;
  text-decoration: none;
}

.login-btn {
  width: 100%;
  padding: 12px;
  background: #6a38c2;
  color: white;
  border: none;
  border-radius: 6px;
  font-weight: 600;
  cursor: pointer;
  margin-bottom: 20px;
}

.login-btn:hover {
  background: #562ea4;
}

.divider {
  text-align: center;
  color: #aaa;
  font-size: 13px;
  margin: 20px 0;
  position: relative;
}

.divider::before,
.divider::after {
  content: "";
  position: absolute;
  top: 50%;
  width: 40%;
  height: 1px;
  background: #ddd;
}

.divider::before {
  left: 0;
}

.divider::after {
  right: 0;
}

.google-btn {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  background: #fff;
  border-radius: 6px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  cursor: pointer;
  font-weight: 500;
}

.google-btn img {
  width: 20px;
  height: 20px;
}

.register-text {
  text-align: center;
  font-size: 13px;
  color: #555;
  margin-top: 20px;
}

.register-text a {
  color: #6a38c2;
  text-decoration: none;
  font-weight: 500;
}


/* MEDIA QUERIES */

/* 2xl */
  @media (max-width: 1536px) {
    .container {
      max-width: 1280px;
    }

  }
  
/* xl */
  @media (max-width: 1280px) {
    .container {
      max-width: 1024px;
    }

    .text h2 {
      font-size: 2rem;
    }

    .text li, h3, p {
      font-size: 1.3rem;
      margin-bottom: 0.2em;
    }
  }
  
/* lg */
  @media (max-width: 1024px) {
    .container {
      max-width: 768px;
    }

    .logo {
      width: 80%;         
      height: auto;       
      display: flex;
      align-items: center;
    }
  
    .responsive-img {
      width: 100%;        
      height: auto;       
      max-width: none;    
    }

    .mobile-menu {
      display: flex;
      align-items: center;
    }
    
    .hamburger {
        display: flex;
      }
    
    #nav-menu {
      display: none;
      flex-direction: column;
      background-color: #f9f9f9;
      padding: 1rem;
    }
    
    #nav-menu.active {
      display: flex;
    }

    .nav-header {
      justify-content: baseline;
      align-items: baseline;
      width: 100%;
    }
    
    .nav-links {
      flex-direction: column;
      gap: 0;
      width: 100%;
      padding-left: 0;
    }
    
    .headerBar {
      display: flex;
      flex-wrap: wrap;
      height: auto;
    }

    ul.nav-links li{
      border: solid, grey, 0.125rem;
      border-left-width: 0;
      border-right-width: 0;
      border-bottom-width: 0;
      width: 100%;
    }

    .questions {
      width: 90%;
    }

    .card {
      width: 80%;
    }

    .text h2 {
      font-size: 1.75rem;
    }

    .text li, h3, p {
      font-size: 0.9rem;
      margin-bottom: 0;
    }

  }
  
  /* md */
  @media (max-width: 768px) {
    .container {
      max-width: 640px;
    }

    .image-content {
    display: none;
  }

  .text {
    width: 100%;
  }
  }
  
  /* sm */
  @media (max-width: 640px) {
    .container {
      max-width: 475px;
    }
  }
  
  /* xs */
  @media (max-width: 475px) {
    .container {
      width: 100%;
    }
  }

  /* Change footer to column */
  @media (max-width: 1024px) {
    .footer-container {
      flex-direction: column;
      align-items: center;
      text-align: center;
    }
    
    .logo-footer img {
      margin: auto;
    }

    div.logo-footer {
      width: 100%;
    }
  }

  body {
    background-color: #f6f6f6;
    margin: 0;
    font-family: 'Helvetica Neue', Arial, sans-serif;
  }

  /* Change portal button when not in hamburger menu */
  @media (min-width: 1024px) {
    .portalButtonSite {
      padding: 12px;
      background: #111111;
      color: white;
      border: none;
      border-radius: 6px;
      font-weight: 600;
      cursor: pointer;
      margin-left: 2rem;
    }
  }

